...
    <string name="navigation_maps">Mapa</string>

    <string name="welcome_title">"Bem-vindo(a) ao Eu, Colaborador!"</string>
    <string name="welcome_text">Um aplicativo para a colaboração popular na identificação de locais de risco de transmissão da dengue e demais doenças associadas ao mosquito Aedes Aegypt.</string>

    <string name="menu_option_title">Menu</string>
    <string name="menu_option_residence_verification">"Fazer verificaçāo de residência"</string>
    <string name="menu_option_sick_person">"Cadastrar pessoa doente</string>
    <string name="menu_option_complaint">"Realizar denuncia de possivel foco"</string>
    <string name="menu_option_edit_perfil">"Editar perfil pessoal</string>
    <string name="menu_option_logout">Sair</string>
    <string name="toast_logout">"Logout realizado com sucesso"</string>

    <string name="login_title">Login</string>
    <string name="login_subtitle">Se você já possui cadastro é só inserir os dados abaixo</string>
    <string name="login_field_login">Digite seu CPF</string>
    <string name="login_field_password">Digite sua senha</string>
...
    <string name="recuperarsenha_complete">E-mail enviado com sucesso</string>
    <string name="recuperarsenha_toast_failed">Falha ao enviar</string>

    <string name="toast_needed_login">"Você precisa estar logado"</string>

    <string name="pessoa_title">Cadastrar Morador</string>
    <string name="pessoa_field_nome">Nome</string>
    <string name="pessoa_field_cpf">CPF</string>
    <string name="pessoa_field_dataNascimento">Data de nascimento (XX/XX/XXXX)</string>
    <string name="pessoa_field_sexo">Sexo</string>
    <string name="pessoa_field_m">Masculino</string>
    <string name="pessoa_field_f">Feminino</string>
    <string name="pessoa_button">CADASTRAR</string>

    <string name="sickperson_title">Cadastrar Pessoa Doente</string>
    <string name="sickperson_field_gestante">É gestante</string>
    <string name="sickperson_enderecoButton">Cadastrar Endereço</string>
    <string name="sickperson_pessoaButton">Cadastrar Pessoa</string>
    <string name="sickperson_address">Logradouro</string>
    <string name="enfermo_tutorial_cpf">Insira aqui o CPF da pessoa que está doente. O uso do CPF visa garantir que se trata de uma pessoa real, sendo mantida toda a privacidade dos dados informados.</string>
    <string name="enfermo_tutorial_endereco">Para melhor mapeamento da doença, você poderá cadastrar 2 endereços, um de sua residência e um para o local de trabalho da pessoa que está doente.</string>

    <string name="titulo_cadastrarendereco">Cadastrar Endereço</string>
    <string name="campo_estado">Estado</string>
    <string name="campo_cidade">Cidade</string>
    <string name="campo_bairro">Bairro</string>
    <string name="campo_cep">Cep</string>
    <string name="campo_logradouro">Logradouro <i>(Rua/Avenida/Travessa)</i> </string>
    <string name="campo_numero">Numero</string>

    <string name="toast_unavailable_service">Serviço indisponível no momento</string>
    <string name="toast_field_not_selected">Nenhum campo foi selecionado</string>
    <string name="cadastro_completo">Cadastro concluído com sucesso</string>

    <string name="cpfinvalido">CPF inválido</string>
...
    <string name="perfil_sexo">Sexo:</string>
    <string name="perfil_email">Email:</string>
    <string name="perfil_reenviar_email">Reenviar email de confirmaçāo</string>
    <string name="perfil_reenviar_email_sucesso">Um novo email foi enviado para confirmação</string>
    <string name="perfil_editar">Editar Perfil</string>
    <string name="perfil_alterar_email">Alterar Email</string>
    <string name="perfil_excluir">Excluir Perfil</string>
    <string name="perfil_sucesso">Salvo com sucesso</string>

    <string name="alterar_email_titulo">Alterar Email</string>
    <string name="alterar_email_et">Novo Email</string>
    <string name="alterar_email_sucesso_titulo">Solicitação enviada</string>
    <string name="alterar_email_sucesso_subtitulo">Você recebera um email para confirmar a alteração</string>
...
    <string name="alterar_senha_nova">Nova senha</string>
    <string name="alterar_senha_nova_confirmacao">Confirme a nova senha</string>
    <string name="alterar_senha_sucesso_titulo">Senha alterada com sucesso</string>

    <string name="excluir_title">Excluir Usuário</string>
    <string name="excluir_subtitulo_1">Tem certeza que deseja excluir sua conta? Depois de excluir você não poderá voltar atrás!</string>
    <string name="excluir_btn">Sim, quero excluir</string>
    <string name="excluir_sucesso">Sua conta foi excluida com sucesso</string>
</resources>

